apps/demo-web/overlays/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-web
  namespace: demo-staging
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging-cloudflare
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - staging-demo.creyeshomelab.xyz
      secretName: demo-web-tls
  rules:
    - host: staging-demo.creyeshomelab.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-web
                port:
                  number: 80
